--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -24,188 +24,180 @@
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
     
     <description><![CDATA[
-        <html>
-        <head>
-            <title>Lua language integration.</title>
-        </head>
-        <body>
-        <h3>Lua language integration</h3>
-
-        <p>Features:</p>
-        <ol>
-            <li>Basic Completions<b>Experimental</b></li>
-            <li>Multiple documentation providers<b>Experimental</b></li>
-            <li>Resolving Globals (Compound vars are buggy)<b>Experimental</b></li>
-            <li>Custom API Support<b>Experimental</b></li>
-            <li>Function Information via Quickhelp<b>Experimental</b></li>
-            <li>Hilighting of Upvalues and Fields<b>Experimental</b></li>
-            <li>Goto Symbol</li>
-            <li>Safe Delete <b>Experimental</b></li>
-            <li>Rename Identifier <b>Experimental</b></li>
-            <li>Quick Documentation</li>
-            <li>JavaHelp For Lua 5.1</li>
-            <li>Execution in the Kahlua interpreter</li>
-            <li>Identifier Highlighter</li>
-            <li>Go to definition</li>
-            <li>find usages</li>
-            <li>Code formatting</li>
-            <li>Keyword completion</li>
-            <li>5 code intentions(s)</li>
-            <li>6 code inspection(s)</li>
-            <li>Highlighting global vs local variables</li>
-            <li>Script execution and run configurations</li>
-            <li>Kahlua interpreter window for interactive script execution (repl)</li>
-            <li>Comes with an embedded Lua compiler written in Java (Kahlua)</li>
-            <li>Structure view</li>
-            <li>Syntax checking</li>
-            <li>Syntax highlighting - including proper handling of extended syntax comments and quotes</li>
-            <li>Customizable highlighting colors</li>
-            <li>Code folding for code blocks and comments</li>
-            <li>Brace Matching for do blocks, long strings and comments, and (, { , [</li>
-            <li>Minor feature: comment in/out.</li>
-        </ol>
-        </body>
+    <html>
+        <h3>Lua language integration for IntelliJ</h3>
+        <br>
+        <b>Features:</b>
+        <br>
+            <ol>
+                <li>Basic Completions<b>Experimental</b></li>
+                <li>Multiple documentation providers<b>Experimental</b></li>
+                <li>Resolving Globals (Compound vars are buggy)<b>Experimental</b></li>
+                <li>Custom API Support<b>Experimental</b></li>
+                <li>Function Information via Quickhelp<b>Experimental</b></li>
+                <li>Hilighting of Upvalues and Fields<b>Experimental</b></li>
+                <li>Goto Symbol</li>
+                <li>Safe Delete <b>Experimental</b></li>
+                <li>Rename Identifier <b>Experimental</b></li>
+                <li>Quick Documentation</li>
+                <li>JavaHelp For Lua 5.1</li>
+                <li>Execution in the Kahlua interpreter</li>
+                <li>Identifier Highlighter</li>
+                <li>Go to definition</li>
+                <li>find usages</li>
+                <li>Code formatting</li>
+                <li>Keyword completion</li>
+                <li>5 code intentions(s)</li>
+                <li>6 code inspection(s)</li>
+                <li>Highlighting global vs local variables</li>
+                <li>Script execution and run configurations</li>
+                <li>Kahlua interpreter window for interactive script execution (repl)</li>
+                <li>Comes with an embedded Lua compiler written in Java (Kahlua)</li>
+                <li>Structure view</li>
+                <li>Syntax checking</li>
+                <li>Syntax highlighting - including proper handling of extended syntax comments and quotes</li>
+                <li>Customizable highlighting colors</li>
+                <li>Code folding for code blocks and comments</li>
+                <li>Brace Matching for do blocks, long strings and comments, and (, { , [</li>
+                <li>Minor feature: comment in/out.</li>
+            </ol>
         </html>
         ]]></description>
     <change-notes><![CDATA[
         <html>
-        <body>
         <dl>
             <dt>0.9.53</dt>
-            <dd>Support for 3rd party libraries via the SDK classpath, Lua quickhelp (ctrl-q) from the html lua docs</dd>
+            <dd>Support for 3rd party libraries via the SDK classpath, Lua quickhelp (ctrl-q) from the html lua docs</dd><br>
             <dt>0.9.52</dt>
-            <dd>Remove duplicate core lua completions</dd>
+            <dd>Remove duplicate core lua completions</dd><br>
             <dt>0.9.51</dt>
-            <dd>Compound reference support including standard Lua functions, e.g. io.write()</dd>
+            <dd>Compound reference support including standard Lua functions, e.g. io.write()</dd><br>
             <dt>0.9.50-Beta1-7</dt>
-            <dd>Major new features, and rework of some fundamental implementations, e.g  reference resoltion, if your build is marked as beta and you find bugs, you can revert to a previous version.</dd>
+            <dd>Major new features, and rework of some fundamental implementations, e.g  reference resoltion, if your build is marked as beta and you find bugs, you can revert to a previous version.</dd><br>
             <dt>0.9.21-23</dt>
-            <dd>Fix lexer errors when indexing, smart de-dent on enter</dd>
+            <dd>Fix lexer errors when indexing, smart de-dent on enter</dd><br>
             <dt>0.9.20</dt>
-            <dd>Formatter tweaks</dd>
+            <dd>Formatter tweaks</dd><br>
             <dt>0.9.19</dt>
-            <dd>Fix field hilights</dd>
+            <dd>Fix field hilights</dd><br>
             <dt>0.9.18</dt>
-            <dd>Fix TODO handling</dd>
+            <dd>Fix TODO handling</dd><br>
             <dt>0.9.17</dt>
-            <dd>Disable folding for single line table constructors</dd>
+            <dd>Disable folding for single line table constructors</dd><br>
             <dt>0.9.16</dt>
-            <dd>fixed lexing of hexadecimal numbers</dd>
+            <dd>fixed lexing of hexadecimal numbers</dd><br>
             <dt>0.9.14</dt>
-            <dd>Performance enhancements</dd>
+            <dd>Performance enhancements</dd><br>
             <dt>0.9.13</dt>
-            <dd>safe delete (experimental)</dd>
+            <dd>safe delete (experimental)</dd><br>
             <dt>0.9.12</dt>
-            <dd>vesioning for IntelliJ 10</dd>
+            <dd>vesioning for IntelliJ 10</dd><br>
             <dt>0.9.11</dt>
-            <dd>adds the rename identifier refactoring (experimental)</dd>
+            <dd>adds the rename identifier refactoring (experimental)</dd><br>
             <dt>0.9.10</dt>
-            <dd>Fixes an edge case where too many upvalues would cause an exception</dd>
+            <dd>Fixes an edge case where too many upvalues would cause an exception</dd><br>
             <dt>0.9.8-9</dt>
-            <dd>Fixes for multiple inspection annotations</dd>
+            <dd>Fixes for multiple inspection annotations</dd><br>
             <dt>0.9.1-7</dt>
-            <dd>Additional reference issues fixed, improved performance of editor when using the indentifier highlighter</dd>
+            <dd>Additional reference issues fixed, improved performance of editor when using the indentifier highlighter</dd><br>
             <dt>0.9</dt>
-            <dd>Most reference issues are fixed. QuickDocs</dd>
+            <dd>Most reference issues are fixed. QuickDocs</dd><br>
             <dt>0.8.33</dt>
-            <dd>New inspection and some bugfixes.</dd>
+            <dd>New inspection and some bugfixes.</dd><br>
             <dt>0.8.32</dt>
-            <dd>fix eof parsing bug</dd>
+            <dd>fix eof parsing bug</dd><br>
             <dt>0.8.31</dt>
-            <dd>stop bug report submissions from generating another bug due to logging</dd>
+            <dd>stop bug report submissions from generating another bug due to logging</dd><br>
             <dt>0.8.30</dt>
-            <dd>enable 3 new inspections. fix a major bug in the parser that was causing exceptions saying there were unparsed tokens</dd>
+            <dd>enable 3 new inspections. fix a major bug in the parser that was causing exceptions saying there were unparsed tokens</dd><br>
             <dt>0.8.25-9</dt>
-            <dd>bugfixes</dd>
+            <dd>bugfixes</dd><br>
             <dt>0.8.24</dt>
-            <dd>Disable auto brace closing and remove the name validator</dd>    
+            <dd>Disable auto brace closing and remove the name validator</dd><br>    
             <dt>0.8.23</dt>
-            <dd>more identifier fixes</dd>                
+            <dd>more identifier fixes</dd><br>                
             <dt>0.8.22</dt>
-            <dd>fix resolution of identifiers used in function declarations like foo:bar(), where foo would not resolve</dd>              
+            <dd>fix resolution of identifiers used in function declarations like foo:bar(), where foo would not resolve</dd><br>              
             <dt>0.8.21</dt>
-            <dd>Adds code to try an rescue an incomplete parse</dd>  
+            <dd>Adds code to try an rescue an incomplete parse</dd><br>  
             <dt>0.8.20</dt>
-            <dd>Enable identifier highlighting by default</dd>
+            <dd>Enable identifier highlighting by default</dd><br>
             <dt>0.8.19</dt>
-            <dd>Fixed many name resolution issues, improved brace handling</dd>            
+            <dd>Fixed many name resolution issues, improved brace handling</dd><br>            
             <dt>0.8.17</dt>
-            <dd>Long string literal fix</dd>
+            <dd>Long string literal fix</dd><br>
             <dt>0.8.16</dt>
-            <dd>Long string literal fix</dd>  
+            <dd>Long string literal fix</dd><br>  
             <dt>0.8.15</dt>
-            <dd>Much improved code formatting, and editor auto-indention</dd>  
+            <dd>Much improved code formatting, and editor auto-indention</dd><br>  
             <dt>0.8.14</dt>
-            <dd>fixes for intentions, tail call marker, improved parser error recovery</dd>  
+            <dd>fixes for intentions, tail call marker, improved parser error recovery</dd><br>  
             <dt>0.8.13</dt>
-            <dd>automated error submissions</dd>  
+            <dd>automated error submissions</dd><br>  
             <dt>0.8.10-12</dt>
-            <dd>Many improvements to the code formatter (still considered experimental)</dd>                 
+            <dd>Many improvements to the code formatter (still considered experimental)</dd><br>                 
             <dt>0.8.9</dt>
-            <dd>Identifier highlighter, javahelp topic for lua 5.1, Kahlua execution</dd>
+            <dd>Identifier highlighter, javahelp topic for lua 5.1, Kahlua execution</dd><br>
             <dt>0.8.1-0.8.4</dt>
-            <dd>Identifier resolution fixes</dd>
+            <dd>Identifier resolution fixes</dd><br>
             <dt>0.8</dt>
-            <dd>Experimental reference resolution for go to declaration and find usages. Does not work for alot of cases. Kahlua SDK also not working</dd>
+            <dd>Experimental reference resolution for go to declaration and find usages. Does not work for alot of cases. Kahlua SDK also not working</dd><br>
             <dt>0.7.13-16</dt>
-            <dd>Fix the unbalanced assignment inspection for the single function call case, automatically select the interpreter from the SDK, fix structure view</dd>
+            <dd>Fix the unbalanced assignment inspection for the single function call case, automatically select the interpreter from the SDK, fix structure view</dd><br>
             <dt>0.7.12</dt>
-            <dd>Support for Lua SDK specification</dd>
+            <dd>Support for Lua SDK specification</dd><br>
             <dt>0.7.11</dt>
-            <dd>Support for Lua Module Projects</dd>
+            <dd>Support for Lua Module Projects</dd><br>
             <dt>0.7.10</dt>
-            <dd>Fixed tail call highlighting, minor bugfixes</dd>
+            <dd>Fixed tail call highlighting, minor bugfixes</dd><br>
             <dt>0.7.9</dt>
-            <dd>Restore operation in Rubymine (tested) and other jetbrains products</dd>
+            <dd>Restore operation in Rubymine (tested) and other jetbrains products</dd><br>
             <dt>0.7.6-0.7.8</dt>
-            <dd>Bug fixes</dd>
+            <dd>Bug fixes</dd><br>
             <dt>0.7.5</dt>
-            <dd>First inspection, global self usage</dd>
+            <dd>First inspection, global self usage</dd><br>
             <dt>0.7-0.7.4</dt>
-            <dd>Using internal parser, instead of external annotator.</dd>
+            <dd>Using internal parser, instead of external annotator.</dd><br>
             <dt>0.6.5</dt>
-            <dd>display key commands for Kahlua shell</dd>
+            <dd>display key commands for Kahlua shell</dd><br>
             <dt>0.6.3 - 0.6.4</dt>
-            <dd>Improve annotation when using Kahlua - now it annotates semi-instantly</dd>
+            <dd>Improve annotation when using Kahlua - now it annotates semi-instantly</dd><br>
             <dt>0.6.2</dt>
-            <dd>Fix unresponsive annotator for syntax errors</dd>
+            <dd>Fix unresponsive annotator for syntax errors</dd><br>
             <dt>0.6.1</dt>
-            <dd>Bug fixes, and disabling of some unimplemented features</dd>
+            <dd>Bug fixes, and disabling of some unimplemented features</dd><br>
             <dt>0.6</dt>
-            <dd>Now using Kahlua as the built in interpreter tool, and the compiler</dd>    
+            <dd>Now using Kahlua as the built in interpreter tool, and the compiler</dd><br>    
             <dt>0.5.1</dt>
-            <dd>Improved the script execution interface, coded mostly from the bash plugin's implementation</dd>            
+            <dd>Improved the script execution interface, coded mostly from the bash plugin's implementation</dd><br>            
             <dt>0.5.0</dt>
-            <dd>Very basic script execution support. The lua interpreter needs to be on your path for this to work. Borrowed lots of code from the bash plugin</dd>            
+            <dd>Very basic script execution support. The lua interpreter needs to be on your path for this to work. Borrowed lots of code from the bash plugin</dd><br>            
             <dt>0.4.3</dt>
-            <dd>Removed some java specific code</dd>
+            <dd>Removed some java specific code</dd><br>
             <dt>0.4.2</dt>
-            <dd>Enabled some more experimental features, run configs, and formatting. Neither really work well at the moment</dd>
+            <dd>Enabled some more experimental features, run configs, and formatting. Neither really work well at the moment</dd><br>
             <dt>0.4.1</dt>
-            <dd>Added application level options for syntax check type</dd>
+            <dd>Added application level options for syntax check type</dd><br>
             <dt>0.4.0</dt>
-            <dd>Using luaj to syntax check the current file. Optional luac in next release</dd>
+            <dd>Using luaj to syntax check the current file. Optional luac in next release</dd><br>
             <dt>0.3.0</dt>
-            <dd>Using luac to syntax check the current file when luac is on the path.</dd>
+            <dd>Using luac to syntax check the current file when luac is on the path.</dd><br>
             <dt>0.2.1</dt>
-            <dd>Improved parser offering better code folding for functions</dd>
+            <dd>Improved parser offering better code folding for functions</dd><br>
             <dt>0.2.0</dt>
-            <dd>Simple block parser based code folding</dd>
+            <dd>Simple block parser based code folding</dd><br>
             <dt>0.1.7</dt>
-            <dd>Fix to make eg. ----[[ a single long comment instead of a short comment followed by a long comment</dd>
+            <dd>Fix to make eg. ----[[ a single long comment instead of a short comment followed by a long comment</dd><br>
             <dt>0.1.6</dt>
-            <dd>Fix to ignore newline after extended string start token
-            </dd>
+            <dd>Fix to ignore newline after extended string start token</dd><br>
             <dt>0.1.5</dt>
-            <dd>Customizable coloring</dd>
+            <dd>Customizable coloring</dd><br>
         </dl>
-        </body>
         </html>
         ]]></change-notes>
 
 
     <depends>com.intellij.modules.lang</depends>
-    <!--<depends>com.intellij.modules.platform</depends>-->
 
     <application-components>
         <!-- Add your application components here -->
@@ -216,10 +208,6 @@
             <implementation-class>com.sylvanaar.idea.Lua.sdk.KahluaSdk</implementation-class>
             <interface-class>com.intellij.openapi.projectRoots.Sdk</interface-class>
         </component>
-        <!--<component>-->
-            <!--<implementation-class>com.sylvanaar.idea.Lua.editor.highlighter.LuaIdentifierHighlighterAppComponent-->
-            <!--</implementation-class>-->
-        <!--</component>-->
         <!--<component>-->
             <!--<implementation-class>com.sylvanaar.idea.Lua.options.LuaOptionsPanel</implementation-class>-->
         <!--</component>-->
@@ -261,6 +249,8 @@
         <!-- Error reporter-->
         <errorHandler implementation="com.sylvanaar.idea.errorreporting.BugzReport"/>
         <!--<errorHandler implementation="com.sylvanaar.idea.errorreporting.YouTrackBugReporter"/>-->
+
+        <!-- Facet -->
         <!--<facetType id="Lua" implementation="com.sylvanaar.idea.Lua.settings.facet.LuaFacetType" />-->
         <!--<frameworkSupport id="Lua" implementation="com.sylvanaar.idea.Lua.settings.facet.LuaFacetTypeFrameworkSupportProvider"/>-->
 
@@ -290,13 +280,10 @@
 
         <!-- Syntax Hilighting extensions -->
         <lang.syntaxHighlighterFactory key="Lua" implementationClass="com.sylvanaar.idea.Lua.editor.highlighter.LuaSyntaxHighlighterFactory" />
-        <!--<syntaxHighlighter key="Lua"  implementationClass="com.sylvanaar.idea.Lua.editor.highlighter.LuaSyntaxHighlighter" />-->
 
         <colorSettingsPage implementation="com.sylvanaar.idea.Lua.editor.highlighter.LuaColorsPage"/>
 
         <!--<quoteHandler fileType="Lua" className="com.sylvanaar.idea.Lua.editor.highlighter.LuaQuoteHandler" />-->
-
-
 
         <!-- Annotator extensions -->
         <annotator language="Lua" implementationClass="com.sylvanaar.idea.Lua.editor.annotator.LuaAnnotator" />
