--- a/resources/com/sylvanaar/idea/Lua/intentions/LuaIntentionsBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/intentions/LuaIntentionsBundle.properties
@@ -35,8 +35,6 @@
 #dynamic.property.dialog.type=&Type of property
 #each.to.for.intention.family.name=Replace Each With For-In
 #each.to.for.intention.name=Replace with For-In
-#expand.boolean.intention.family.name=Expand Boolean
-#expand.boolean.intention.name=Expand boolean use to if-else
 #find.method.ro.closure.usages.0=Searching for usages of enclosing {0} in project files
 #flip.conditional.intention.family.name=Flip Conditional
 #flip.conditional.intention.name=Flip ?:
@@ -69,6 +67,8 @@
 #split.else.if.intention.family.name=Split Else If
 #split.else.if.intention.name=Split else-if
 #wrong.first.parameter.type={0} ''{1}'' is used with named arguments, but its first parameter ''{2}'' does not conform to Map type.
+expand.boolean.intention.family.name=Expand Boolean
+expand.boolean.intention.name=Expand boolean use to if-else
 change.to.c.style.comment.intention.family.name=Replace With C-Style Comment
 change.to.c.style.comment.intention.name=Replace with C-style comment
 change.to.end.of.line.comment.intention.family.name=Replace With End Of Line Comment
